--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
 
 allprojects {
     repositories {
+      //////  mavenCentral() // jcenter() works as well because it pulls from Maven Central
         google()
         jcenter()
     }
