--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -31,4 +32,8 @@ dependencies {
     implementation 'nl.psdcompany:duo-navigation-drawer:3.0.0'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.firebase:firebase-auth:16.2.1'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
 }
+apply plugin: 'com.google.gms.google-services'
